<resources>

    <string name="app_name">Banking Simulator</string>
    <string name="home">Home</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="transfer">Transfer funds</string>
    <string name="transactions">Transactions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>


    <string name="hello">Hello World, MyAndroidAppActivity!</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string-array name="transfer_purpose">
        <item>Make Payment</item>
        <item>Return Money</item>
        <item>Lend Money</item>
        <item>Give Allowance</item>
        <item>Others</item>
    </string-array>

    <string name="app_name2">ImageZoomCrop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="retake_pic">Retake Picture</string>
    <string name="from_gallery">From Gallery</string>
    <string name="update_profile_picture">Update Picture</string>

</resources>
