<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home">
        </item>

        <item
            android:id="@+id/deposit"
            android:title="@string/deposit">
        </item>

        <item
            android:id="@+id/withdraw"
            android:title="@string/withdrawal">
        </item>

        <item
            android:id="@+id/transfer"
            android:title="@string/transfer">
        </item>

        <item
            android:id="@+id/transaction"
            android:title="@string/transactions">
        </item>

        <item
            android:id="@+id/issuenotes"
            android:title="Issue notes">
        </item>

    </group>

</menu>