<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home">
        </item>

        <item
            android:id="@+id/depositAH"
            android:title="@string/deposit">
        </item>

        <item
            android:id="@+id/withdrawalAH"
            android:title="@string/withdrawal">
        </item>

        <item
            android:id="@+id/transferAH"
            android:title="@string/transfer">
        </item>

        <item
            android:id="@+id/transaction"
            android:title="@string/transactions">
        </item>

        <item
            android:id="@+id/addSavingGoals"
            android:title="Add Saving Goals">
        </item>

        <item
            android:id="@+id/viewSavingGoals"
            android:title="View Saving Goals">
        </item>

        <item
            android:id="@+id/redeemBanknote"
            android:title="Redeem Banknotes">
        </item>

        <!--<item
            android:id="@+id/changePassword"
            android:title="Change password">
        </item>

        <item
            android:id="@+id/enableFingerprint"
            android:title="Enable/Disable Fingerprint">
        </item>
        -->
    </group>

</menu>